Fixed spacing and formatting of page

--- a/frontend/src/Pages/GameResultsPage/index.css
+++ b/frontend/src/Pages/GameResultsPage/index.css
@@ -9,118 +9,55 @@
     background: #e35353;
 }
 
+.home-icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    left: 10px;
+}
+
+.audio-icon {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    right: 10px;
+}
+
+.heading {
+    position: absolute;
+    margin: 10px;
+    align-items: center;
+    justify-content: center;
+    left: 50%;
+    transform: translate(-50%);
+}
+
+.results_header {
+    width: 100%;
+    margin:0px;
+    margin-bottom: 30px;;
+}
+
+.podium-results {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin:0px;
+}
+
 .grid-container {
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 16px;
-    margin-top: 20px;
-  }
-
-.Results_header {
-    position: relative;
-    width: 100%;
-    color: #fff;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 40px;
 }
 
-.Results_header img {
-    position: absolute;
-    top: 20px;
-    width: 50px;
-    height: 50px;
-}
-
-/* .Results_content {
-    padding: 0 50px;
-    color: #ffffff;
-}
-
-.Results_content_top {
-    width: 350px;
-    margin: auto;
-    display: flex;
-    margin-bottom: 30;
-}
-
-.Results_content_item {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: column;
-}
-
-.Results_content_item img {
-    width: 70px;
-    height: 70px;
-    margin: 10px 15px;
-}
-
-.Results_content_bot {
-    display: flex;
-    justify-content: space-between;
-}
-
-.Results_content_bot ul {
-    width: 50%;
-    display: flex;
-    justify-content: space-between;
-    flex-flow: row wrap;
-    padding: 0px 30px 0 0;
-}
-
-.Results_content_bot li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.Results_content_bot li img {
-    width: 50px;
-    height: 50px;
-    margin: 30px;
-} */
-
-.Results_bottom {
-    text-align: center;
+.button {
     margin-top: 20px;
 }
-
-.Results_bottom div {
-    background: #61c351;
-    padding: 10px 20px;
-    border-radius: 48%;
-    display: inline-block;
-}
-/* 
-.Results_content_bot li span:nth-of-type(2) {
-    display: inline-block;
-    width: 150px;
-}
-
-.Results_content_bot li span:nth-of-type(3) {
-    display: inline-block;
-    width: 130px;
-}
-
-.Results_content_item p:nth-of-type(1) {
-    margin: 0;
-}
-
-.Results_content_item p:nth-of-type(2) {
-    width: 100px;
-    height: 25px;
-    margin: 0;
-}
-
-.Results_content_item p:nth-of-type(3) {
-    width: 100px;
-    height: 100px;
-    background: #f8a724;
-    margin: 0;
-    line-height: 100px;
-    font-size: 25px;
-}
-
-.Results_content_item:nth-of-type(2) p:nth-of-type(3) {
-    height: 150px;
-    line-height: 150px;
-} */
